--- a/.golangci.yml
+++ b/.golangci.yml
@@ -2,17 +2,28 @@
 linters:
   enable:
   - bodyclose
+  - dupl
   - exportloopref
   - gochecknoinits
   - gocritic
   - gofmt
   - gofumpt
-  - golint
   - misspell
+  - lll
   - prealloc
+  - revive
   - unconvert
+  - whitespace
   disable:
   - errcheck
 
 issues:
   exclude-use-default: false
+
+linters-settings:
+  govet:
+    enable-all: true
+    disable:
+    - fieldalignment
+    - reflectvaluecompare
+    - shadow
